[package]
name = "temp_fix"
version = "0.1.0"
edition = "2021"
description = "convert temperatures"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clearscreen = "2.0.1"

[profile.release]
debug = 0
lto = true
strip = "debuginfo"
panic = "abort"